Use /blog instead of /posts for blog entries

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,9 @@ theme = "kpumuk"
 [author]
 name = "Dmytro Shteflyuk"
 
+[permalinks]
+posts = "/blog/:slug"
+
 [params]
 # social icons
 twitter = "kpumuk"
