--- a/config.toml
+++ b/config.toml
@@ -21,3 +21,4 @@ bio = "Welcome to my personal corner of Internet, where I write on things that i
 # misc
 disableHLJS = true
 repo = "https://github.com/kpumuk/blog-dmytro"
+font_css_url = "https://use.typekit.net/fzy3wla.css"
