--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ posts = "/blog/:slug"
 # social icons
 twitter = "kpumuk"
 github = "kpumuk"
+mastodon = "@kpumuk@ruby.social"
 rss = true
 # home page profile
 name = "Dmytro Shteflyuk"
