Locking Hugo version for development and deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
+[build]
+command = "hugo --gc"
+publish = "public"
+
+[context.production.environment]
+HUGO_ENV = "production"
+HUGO_VERSION = "0.105.0"
+
 [[redirects]]
 from = "/*"
 to = "/stand-with-ukraine/"
