Added twitter:site to twitter cards

--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,9 @@ disableHLJS = true
 repo = "https://github.com/kpumuk/blog-dmytro"
 font_css_url = "https://use.typekit.net/fzy3wla.css"
 
+[social]
+twitter = "kpumuk"
+
 [markup]
 
 [markup.highlight]
