--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
 command = "hugo --gc"
 publish = "public"
 
+[[headers]]
+for = "/fonts/*"
+
+[headers.values]
+Cache-Control = "public, s-maxage=604800"
+
 [context.production.environment]
 HUGO_ENV = "production"
 HUGO_VERSION = "0.105.0"
