--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,12 @@ for = "/fonts/*"
 [headers.values]
 Cache-Control = "public, s-maxage=31536000, immutable"
 
+[[headers]]
+for = "/*.css"
+
+[headers.values]
+Cache-Control = "public, s-maxage=31536000, immutable"
+
 [context.production.environment]
 HUGO_ENV = "production"
 HUGO_VERSION = "0.105.0"
