--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,13 @@ title = "Dmytro on Things"
 theme = "kpumuk"
 rssLimit = 20
 copyright = 'This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.'
-ignoreFiles = ['\.excalidraw$', '/supplementary/', '/static/.*\.md']
+ignoreFiles = [
+  '\.excalidraw$',
+  '/supplementary/',
+  '/static/.*\.md',
+  '/tools/',
+  '/scripts/'
+]
 
 [author]
 name = "Dmytro Shteflyuk"
