Switched Yarn to v3 and updated dependencies

--- a/tools/excalidraw-exporter/package.json
+++ b/tools/excalidraw-exporter/package.json
@@ -11,5 +11,6 @@
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "packageManager": "yarn@3.6.4"
 }
