--- a/tools/excalidraw-exporter/package.json
+++ b/tools/excalidraw-exporter/package.json
@@ -5,10 +5,10 @@
   "bin": "./main.js",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.15.2",
+    "@excalidraw/excalidraw": "^0.17.3",
     "canvas": "^2.11.2",
-    "jsdom": "^22.1.0",
-    "jsdom-global": "^3.0.2",
+    "jsdom": "^24.0.0",
+    "path2d-polyfill": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
