Added a link to linkedin profile

--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ posts = "/blog/:slug"
 twitter = "kpumuk"
 github = "kpumuk"
 mastodon = "@kpumuk@ruby.social"
+linkedin = "kpumuk"
 mail = "hi@dmytro.sh"
 rss = true
 # home page profile
