--- a/tools/excalidraw-exporter/package.json
+++ b/tools/excalidraw-exporter/package.json
@@ -5,12 +5,12 @@
   "bin": "./main.js",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.17.3",
+    "@excalidraw/excalidraw": "^0.17.6",
     "canvas": "^2.11.2",
-    "jsdom": "^24.0.0",
-    "path2d-polyfill": "^2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "jsdom": "^24.1.0",
+    "path2d": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "packageManager": "yarn@4.1.0"
 }
